welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: type mismatch;
 found   : Int
 required: Boolean
if (sa==true) {return n}
                      ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
if (sa==true) {return n}
^