welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(n: Int,sa: Boolean) :Boolean ={
if (sa==true) {return n}


}